# Tlaunch

./: Cargo.toml  LICENSE  README.md
src/: config.rs  fuzzy.rs  main.rs  model.rs  picker.rs  runner.rs  scanner.rs  search.rs  setup.rs
